--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "node": ">=7.5"
   },
   "dependencies": {
-    "util.pkgwrap": "0.0.72"
+    "util.constants": "^0.0.1",
+    "util.pkgwrap": "0.0.72",
+    "xregexp": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.47",
+    "@types/xregexp": "^3.0.29",
     "ava": "^0.23.0",
     "babel-preset-env": "^1.6.1",
     "coveralls": "^3.0.0",
@@ -31,10 +34,11 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "all": "yarn install && yarn run clean && yarn run lint && yarn run build && yarn test && yarn run report",
+    "all": "yarn install && yarn run clean && yarn run lint && yarn run build && yarn run docs && yarn test && yarn run report",
     "build": "pkgwrap --build",
     "clean": "pkgwrap --clean",
     "coverage": "pkgwrap --coverage",
+		"docs": "pkgwrap --docs",
     "lint": "pkgwrap --lint",
     "postinstall": "pkgwrap --postinstall",
     "report": "pkgwrap --reporting",
