--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,6 @@
 node_modules/
 
+tmp/
 test/
 tsconfig.json
 tslint.json
@@ -12,9 +13,9 @@ tslint.json
 coverage
 .nyc_output
 *.ts
-!*.d.ts
 test.js
 test.d.ts
+!index.d.ts
 
 *.js.map
 jsdoc.json
