--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.4",
   "author": "jmquigley <jmquigley@outlook.com>",
   "description": "Library of string helper functions",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -13,46 +15,45 @@
     "url": "https://github.com/jmquigley/util.string/issues"
   },
   "engines": {
-    "node": ">=7.5"
+    "node": ">=7.x"
   },
   "dependencies": {
-    "util.constants": "^0.0.3",
-    "util.pkgwrap": "0.0.73",
+    "util.constants": "^0.0.5",
     "xregexp": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.53",
     "@types/xregexp": "^3.0.29",
-    "ava": "^0.23.0",
+    "ava": "^0.24.0",
     "babel-preset-env": "^1.6.1",
     "coveralls": "^3.0.0",
     "debug": "^3.1.0",
     "nyc": "^11.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1"
-  },
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "scripts": {
-    "all": "yarn install && yarn run clean && yarn run lint && yarn run build && yarn run docs && yarn test && yarn run report",
-    "build": "pkgwrap --build",
-    "clean": "pkgwrap --clean",
-    "coverage": "pkgwrap --coverage",
-    "docs": "pkgwrap --docs",
-    "lint": "pkgwrap --lint",
-    "postinstall": "pkgwrap --postinstall",
-    "report": "pkgwrap --reporting",
-    "test": "pkgwrap --testing --ava"
+    "typescript": "^2.6.2"
   },
   "ava": {
     "babel": "inherit"
   },
   "pkgwrap": {
     "cleanup": [
+			"docs/",
       "index.d.ts",
       "index.js",
       "test.d.ts",
       "test.js"
     ]
+  },
+  "scripts": {
+    "all": "yarn install && yarn run build && yarn run docs && yarn test && yarn run report",
+    "build": "yarn run clean && yarn run lint && pkgwrap --build",
+    "clean": "pkgwrap --clean",
+    "coverage": "pkgwrap --coverage",
+    "docs": "pkgwrap --docs",
+    "lint": "pkgwrap --lint",
+    "preinstall": "yarn global add util.pkgwrap",
+		"prepublishOnly": "yarn run all",
+    "report": "pkgwrap --reporting",
+    "test": "pkgwrap --testing --ava"
   }
 }
