Updates babel env configuration

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "xregexp": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "@types/node": "^10.12.18",
     "@types/xregexp": "^3.0.29",
-    "babel-preset-env": "^1.7.0",
     "debug": "^4.1.1",
     "jest": "^23.6.0",
     "tslint": "^5.12.0",
