--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": ">=7.x"
   },
   "dependencies": {
-    "util.constants": "^0.0.13",
+    "util.constants": "^0.0.14",
     "xregexp": "^4.2.0"
   },
   "devDependencies": {
@@ -64,6 +64,7 @@
     "all": "yarn install && yarn run build && yarn run docs && yarn test",
     "build": "yarn run clean && yarn run lint && pkgwrap --build",
     "clean": "pkgwrap --clean",
+    "coverage": "pkgwrap --coverage",
     "docs": "pkgwrap --docs",
     "lint": "pkgwrap --lint",
     "prepublishOnly": "yarn run all",
