--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,9 @@
 node_modules/
 
-tmp/
 test/
+__tests__
+docs
+logs
 tsconfig.json
 tslint.json
 .travis.yml
@@ -9,23 +11,21 @@ tslint.json
 .gitignore
 .gitattributes
 
-
 coverage
 .nyc_output
+*.tgz
 *.ts
+!*.d.ts
 test.js
 test.d.ts
-!index.d.ts
+index.js
 
 *.js.map
 jsdoc.json
-gulpfile.js
-server.*
-.awcache
-.babelrc
-.DS_Store
-docs/
-public/
-webpack.config.js
+gulpfile.*
 yarn.lock
 yarn-error.log
+.babelrc
+.prettierignore
+.prettierrc
+jest.config.js
