--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"baseUrl": ".",
 		"declaration": true,
 		"experimentalDecorators": true,
+		"incremental": true,
 		"lib": ["DOM", "ESNext"],
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
