--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "util.string",
-	"version": "0.0.24",
+	"version": "0.0.25",
 	"author": "jmquigley <jmquigley@outlook.com>",
 	"description": "Library of string helper functions",
 	"private": false,
@@ -22,20 +22,19 @@
 		"index.*.min.js",
 		"index.d.ts"
 	],
-	"dependencies": {
-		"util.constants": "^0.0.26",
-		"xregexp": "^4.2.4"
-	},
 	"devDependencies": {
 		"@babel/cli": "^7.4.3",
 		"@babel/core": "^7.4.3",
-		"@babel/plugin-transform-modules-umd": "^7.2.0",
+		"@babel/plugin-proposal-class-properties": "^7.4.0",
+		"@babel/plugin-proposal-decorators": "^7.4.0",
+		"@babel/plugin-transform-modules-commonjs": "^7.4.3",
+		"@babel/plugin-transform-runtime": "^7.4.3",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/preset-typescript": "^7.3.3",
 		"@babel/runtime": "^7.4.3",
 		"@types/jest": "^24.0.11",
 		"@types/node": "^11.13.4",
-		"@types/xregexp": "^3.0.29",
+		"babel-loader": "^8.0.5",
 		"babel-minify": "^0.5.0",
 		"babel-preset-minify": "^0.5.0",
 		"coveralls": "^3.0.3",
@@ -45,7 +44,9 @@
 		"tslint": "^5.15.0",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.4.3",
-		"util.pkgwrap": "^0.0.112"
+		"util.pkgwrap": "^0.0.112",
+		"webpack": "^4.29.6",
+		"webpack-cli": "^3.3.0"
 	},
 	"pkgwrap": {
 		"cleanup": [
@@ -54,10 +55,11 @@
 		]
 	},
 	"scripts": {
-		"all": "yarn install && yarn build && yarn docs && yarn test && yarn manifest",
-		"build": "yarn lint && yarn prettier && yarn build:es && yarn build:umd",
-		"build:es": "tsc -p . && minify index.js --out-file index.es.min.js",
-		"build:umd": "babel index.js --out-file index.umd.min.js",
+		"all": "yarn install && NODE_ENV=production yarn build && yarn docs && yarn test && yarn manifest",
+		"build": "yarn lint && yarn prettier && yarn build:umd && yarn build:es && yarn build:cjs",
+		"build:cjs": "babel index.ts --sourceType module --out-file index.cjs.min.js",
+		"build:es": "minify index.js --sourceType module --out-file index.es.min.js",
+		"build:umd": "pkgwrap --build --webpack",
 		"clean": "pkgwrap --clean",
 		"clean:dist": "yarn clean && rimraf node_modules/ yarn.lock",
 		"coverage": "pkgwrap --coverage --jest",
