--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "util.string",
-	"version": "0.0.32",
+	"version": "0.0.33",
 	"author": "jmquigley <jmquigley@outlook.com>",
 	"description": "Library of string helper functions",
 	"private": false,
@@ -44,8 +44,9 @@
 		"tslint": "^5.18.0",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.5.3",
+		"util.constants": "^0.0.27",
 		"util.pkgwrap": "^0.0.112",
-		"webpack": "^4.36.1",
+		"webpack": "^4.38.0",
 		"webpack-cli": "^3.3.6"
 	},
 	"pkgwrap": {
