--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "util.string",
-	"version": "0.0.33",
+	"version": "0.0.34",
 	"author": "jmquigley <jmquigley@outlook.com>",
 	"description": "Library of string helper functions",
 	"private": false,
@@ -23,31 +23,31 @@
 		"index.d.ts"
 	],
 	"devDependencies": {
-		"@babel/cli": "^7.5.5",
-		"@babel/core": "^7.5.5",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-decorators": "^7.4.4",
-		"@babel/plugin-transform-modules-commonjs": "^7.5.0",
-		"@babel/plugin-transform-runtime": "^7.5.5",
-		"@babel/preset-env": "^7.5.5",
-		"@babel/preset-typescript": "^7.3.3",
-		"@babel/runtime": "^7.5.5",
-		"@types/jest": "^24.0.15",
-		"@types/node": "^12.6.8",
+		"@babel/cli": "^7.7.5",
+		"@babel/core": "^7.7.5",
+		"@babel/plugin-proposal-class-properties": "^7.7.4",
+		"@babel/plugin-proposal-decorators": "^7.7.4",
+		"@babel/plugin-transform-modules-commonjs": "^7.7.5",
+		"@babel/plugin-transform-runtime": "^7.7.6",
+		"@babel/preset-env": "^7.7.6",
+		"@babel/preset-typescript": "^7.7.4",
+		"@babel/runtime": "^7.7.6",
+		"@types/jest": "^24.0.23",
+		"@types/node": "^12.12.17",
 		"babel-loader": "^8.0.6",
-		"babel-minify": "^0.5.0",
-		"babel-preset-minify": "^0.5.0",
-		"coveralls": "^3.0.5",
+		"babel-minify": "^0.5.1",
+		"babel-preset-minify": "^0.5.1",
+		"coveralls": "^3.0.9",
 		"debug": "^4.1.1",
-		"jest": "^24.8.0",
-		"prettier": "^1.18.2",
-		"tslint": "^5.18.0",
+		"jest": "^24.9.0",
+		"prettier": "^1.19.1",
+		"tslint": "^5.20.1",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.5.3",
-		"util.constants": "^0.0.27",
-		"util.pkgwrap": "^0.0.112",
-		"webpack": "^4.38.0",
-		"webpack-cli": "^3.3.6"
+		"typescript": "^3.7.3",
+		"util.constants": "^0.0.28",
+		"util.pkgwrap": "^0.0.114",
+		"webpack": "^4.41.2",
+		"webpack-cli": "^3.3.10"
 	},
 	"pkgwrap": {
 		"cleanup": [
@@ -58,7 +58,7 @@
 	"scripts": {
 		"all": "yarn install && NODE_ENV=production yarn build && yarn docs && yarn test && yarn manifest",
 		"build": "yarn lint && yarn prettier && yarn build:umd && yarn build:es && yarn build:cjs",
-		"build:cjs": "babel index.ts --sourceType module --out-file index.cjs.min.js",
+		"build:cjs": "babel index.ts --source-type module --out-file index.cjs.min.js",
 		"build:es": "minify index.js --sourceType module --out-file index.es.min.js",
 		"build:umd": "pkgwrap --build --webpack",
 		"clean": "pkgwrap --clean",
